[tool.poetry]
name = "edmc-picconv"
version = "1.2.0"
description = "edmc plugin for screenshots conversion"
authors = ["Jacek Kotlarski <szumak@virthost.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.4.0"
nose = "^1.3.7"
typing-extensions = "^4.6.3"
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
